Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115109

[REG] QTabWidget doesn't draw tabs on the left of the initially current tab

XMLWordPrintable

    • Linux/X11
    • 3965d52ad (dev), ec4b9503e (6.6), 73d8115ee (6.5)

      The very simple testcase attached (QTabWidget, 2 tabs, the first one with a very short title, the second one with a longer title, and setCurrentIndex(1) before show) shows only one tab instead of two. This worked in 6.5.0 and before.

      The regression comes from commit e851d4c06154bf02b23030ff1f7024a8b9edf874 "QTabBar: don't scroll when laying out the tabs"

      If I revert aef2486775497903a1d5 and e851d4c06154bf02 in my v6.5.1 build, it works again.

        1. bug.cpp
          1 kB
        2. tabwidget_bug.cpp
          0.5 kB
        For Gerrit Dashboard: QTBUG-115109
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            dfaure_kdab David Faure
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes